--- a/About Us - Careers.html
+++ b/About Us - Careers.html
@@ -129,7 +129,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style display-2 col-md-6">
-                     <p>Software Developer (Natick, MA)</p>
+                     <p>Software Development Engineer (Natick, MA)</p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6"><p>Design and develop medical infusion pump embedded software systems and communication protocols using 32-bit microprocessor, RS232, I2C, SPI, USB and Sockets; Design and develop infusion pump business logic using multithreaded programming on RTOS; Test and troubleshoot infusion pump software; Verify infusion pump algorithms using Matlab; Enhance infusion pump performance using ultrasonic/temperature sensors; Establish, document, and verify development methodology and validation reports.
 </p><p></p><div>Must have a Master’s Degree in Computer Science, Computer Engineering, or Electrical Engineering plus 2 years experience in job offered. Require skills and knowledge in 32-bit microprocessor, RTOS, RS232/I2C/SPI, Sockets, Multithreaded, Matlab, ultrasonic/temperature sensors.
@@ -176,7 +176,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/s" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Website <a href="https://mobirise.site/f" style="color:#aaa;">was designed</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/l" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Develop your own website with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
